<resources>
    <string name="app_name">Saiga Driver</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_the_phone_number">Enter the phone number</string>
    <string name="enter_name">Enter your first name</string>
    <string name="enter_last_name">Enter your last name</string>
    <string name="next">Next</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="phone_hint">901234567</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="permission_check">Permissions check</string>
    <string name="check">Check</string>
    <string name="account_not">Do you not have an account yet?</string>
    <string name="already_account">Do you already have an account?</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="please_enable_notification">Please turn on notifications so that you don\'t miss every incoming order. This will not compromise your security.</string>
    <string name="enable_location">Enable location</string>
    <string name="please_enable_location">Please turn on geolocation to ensure that we can communicate with you effectively. This does not pose any risk to your security.</string>
    <string name="home">Home</string>
    <string name="default_from">Оққўрғон (маҳаллий) жомеъ масжиди</string>
    <string name="default_to">Юнусабадский район, м-в юнусабад-19, ул. дехканабад, 17</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="total_balance">Total balance</string>
    <string name="transfer_money">Transfer money</string>
    <string name="customer_care">Customer care</string>
    <string name="settings">Settings</string>
    <string name="directions">Directions</string>
    <string name="finance">Finance</string>
    <string name="delete_direction">Delete direction</string>
    <string name="add_direction">Add direction</string>
    <string name="where_from">Where from</string>
    <string name="where_to">Where to</string>
    <string name="amount">Departure price</string>
    <string name="time_to_leave">Time to leave</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="theme">Theme</string>
    <string name="accept_order">Do you accept this order?</string>
    <string name="accept">Accept</string>
    <string name="log_out">Log out</string>
    <string name="filter">Filter</string>
    <string name="language">Language</string>
    <string name="uzbek">Uzbek</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="choose_date">Choose date</string>
    <string name="error">Error</string>
    <string name="english">English</string>
    <string name="message">Message</string>
    <string name="success">Success</string>
    <string name="edit_profile">Edit profile</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="birthday">Birthday</string>
    <string name="confirm">Save</string>
    <string name="hello">Hello</string>
    <string name="comment">Comment</string>
    <string name="required">Required*</string>
    <string name="date">Date</string>
    <string name="default_time">12:00</string>
    <string name="decline">Decline order</string>
    <string name="help">Help</string>
    <string name="call">Call</string>
    <string name="km_h">km/h</string>
    <string name="end_order">End order</string>
    <string name="start_pick_up">Start pick up</string>
    <string name="back_order">Order back</string>
    <string name="trip_ended">Your trip has ended</string>
    <string name="distance">Distance</string>
    <string name="money">Money</string>
    <string name="close">Close</string>
    <string name="not_specified">address is not specified</string>
    <string name="not_order_back">Sorry, you can no longer return this order. Try contacting the administration.</string>
    <string name="end_order_really">Are you sure you want to complete this command? 1. If the order is completed, it is not possible to resume it!</string>
    <string name="kalpak" translatable="false">Karakalpak</string>
    <string name="light">Light</string>
    <string name="order">Order</string>
    <string name="order_near">Order near you</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="hybrid">Hybrid</string>
    <string name="map_type">Map type</string>
    <string name="get_started">Get started</string>
    <string name="enable_orders">Enable receiving orders</string>
    <string-array name="title_intro">
        <item>Accept a job</item>
        <item>Tracking Realtime</item>
        <item>Earn Money</item>
    </string-array>

    <string-array name="sub_title_intro">
        <item>With Saiga,you can find your job wherever you want</item>
        <item>You can receive all orders easily and quickly</item>
        <item>Easy earning opportunity and cheap service too</item>
    </string-array>

    <string name="start_time">Start time</string>

    <string name="end_time">End time</string>
    <string name="login_description">You must enter the phone number specified when concluding the contract</string>
    <string name="payment">Payment</string>
    <string name="payment_connection">No other services have been added yet. They will be added soon. For now, you can top up the account by contacting the administration.</string>

    <string name="granted_phone">If you do not give permission, you will not be able to use this service</string>
    <string name="connection_error">There was a problem connecting, please check</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="paid_waiting">Paid waiting</string>
    <string name="start">Start</string>
    <string name="end">End</string>
</resources>