<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_extra_large">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_std" />


        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_large" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_from_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/margin_std"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_target_blue"
            tools:text="@string/default_from" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_to_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_std"
            android:drawablePadding="@dimen/margin_std"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_target_red"
            tools:text="@string/default_to" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_std"
            android:drawablePadding="@dimen/margin_std"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_direction"
            tools:text="Order near you 3km" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_accept"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/bg_home_btn"
            android:text="@string/accept"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_decline"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/bg_profile"
            android:text="@string/decline"
            android:textSize="16sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>