<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_payment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/margin_large"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment"/>

    <com.google.android.material.textview.MaterialTextView
        app:layout_constraintTop_toBottomOf="@id/image_sad"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:textColor="@color/dark_grey"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_height="wrap_content"
        android:text="@string/payment_connection" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_sad"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:tint="@color/primary"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_sad"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_phone"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_std"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/phone"
        android:textSize="18sp"
        app:cornerRadius="@dimen/margin_component"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>