<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/bg_language"
    android:padding="@dimen/margin_extra_large"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_accept_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept_order"
        android:textColor="@color/black_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_target_red"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/margin_std"
        android:src="@drawable/ic_target_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_accept_order" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_from_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_std"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/black_light"
        app:layout_constraintBottom_toBottomOf="@id/image_target_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_target_red"
        app:layout_constraintTop_toTopOf="@id/image_target_red"
        tools:text="@string/default_from" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_target_blue"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/margin_std"
        android:src="@drawable/ic_target_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_target_red" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_to_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_std"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/black_light"
        app:layout_constraintBottom_toBottomOf="@id/image_target_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_target_blue"
        app:layout_constraintTop_toTopOf="@id/image_target_blue"
        tools:text="@string/default_to" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_component"
        android:textColor="@color/dark_grey"
        app:layout_constraintStart_toStartOf="@id/image_target_red"
        app:layout_constraintTop_toBottomOf="@id/tv_to_order"
        tools:text="@tools:sample/lorem[30]" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:background="@drawable/bg_main_btn"
        android:text="@string/accept"
        app:layout_constraintBottom_toTopOf="@id/space"
        app:layout_constraintTop_toBottomOf="@id/tv_comment" />

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_component"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>